# gino-stubs

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  dev-requirements.txt  fix-poetry.sh  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: codeql-analysis.yml  unit-tests.yml
.vim/: coc-settings.json
gino-stubs/: __init__.pyi  api.pyi  bakery.pyi  crud.pyi  declarative.pyi  engine.pyi  exceptions.pyi  json_support.pyi  loader.pyi  schema.pyi  strategies.pyi  transaction.pyi
gino-stubs/dialects/: __init__.pyi  aiomysql.pyi  asyncpg.pyi  base.pyi
gino-stubs/ext/: __init__.pyi  aiohttp.pyi
ginomypy/: __init__.py  hooks.py  names.py  plugin.py  utils.py
test/: conftest.py  ginomypy.ini  testgino.py
test/test-data/: gino-basics.test  gino-declarative-plugin.test  gino-loader.test  test_basics.yml  test_declarative_plugin.yml  test_loader.yml
test/test-data/unit/: gino-loader.test
