[tool.poetry]
name = "gino-stubs"
version = "1.0.1+0"
description = "Gino stubs and mypy plugin"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"

packages = [
  { include = "gino-stubs" },
  { include = "ginomypy" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
mypy = ">=0.800"
typing-extensions = ">=3.7.4"
sqlalchemy-stubs = "^0.4"
asyncpg-stubs = {git = "https://github.com/bryanforbes/asyncpg-stubs.git", rev = "0ac9262dfa4333d6d30b83b0edef969d537b9b45"}
importlib_metadata = {version = "^1.7.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
attrs = ">=18.0"
black = {version = "^21.5b2", allow-prereleases = true}
flake8 = "^3.9"
flake8-bugbear = {version = ">=19.3"}
flake8-pyi = {version = "^20.10"}
pre-commit = "^2.13"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-mypy-plugins = "~1.7.0"
pytest-xdist = "^2.2"
py = ">=1.5.2"
gino = "~1.0.1"
sqlalchemy = "~1.2.18"
isort = "^5.8.0"

[tool.black]
line-length = 88
target-version = ["py36", "py37"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
extra_standard_library = ["typing_extensions"]
known_first_party = ["ginomypy"]
virtual_env = ".venv"
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-nauto --mypy-ini-file=test/ginomypy.ini"
testpaths = ["test"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
