[tool.poetry]
name = "gino-stubs"
version = "1.0.1+0"
description = "Gino stubs and mypy plugin"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"

packages = [
  { include = "gino-stubs" },
  { include = "ginomypy" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
mypy = ">=0.931"
typing-extensions = ">=3.7.4"
gino = "~1.0.1"
importlib_metadata = {version = "^1.7.0", python = "<3.8"}
sqlalchemy-stubs = "^0.4"
asyncpg-stubs = {git = "https://github.com/bryanforbes/asyncpg-stubs.git", rev = "bb92f810baaa157c3750610a2ac946dfd903a5b8"}

[tool.poetry.dev-dependencies]
attrs = ">=18.0"
black = {version = "^22.1", allow-prereleases = true}
flake8 = "^4.0"
flake8-bugbear = {version = ">=19.3"}
flake8-pyi = {version = "^20.10"}
pre-commit = "^2.17"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mypy-plugins = "~1.9.3"
pytest-xdist = "^2.5"
py = ">=1.5.2"
sqlalchemy = "~1.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 88
target-version = ["py36", "py37"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | external
)/
'''

[tool.isort]
extra_standard_library = ["typing_extensions"]
known_first_party = ["ginomypy"]
virtual_env = ".venv"
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-nauto --mypy-ini-file=test/ginomypy.ini --mypy-only-local-stub"
testpaths = ["test"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
